fix for background image not displaying correctly on mobile

--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 body {
+    margin: 0;
+}
+.img {
     background:linear-gradient(rgba(255,255,255,0.15), rgba(255,255,255,0.15)), url(background1.jpg);
-    /* background-image: url(background1.jpg); */
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
     
-    
+}
+
+.content {
+    position: absolute;
+    left: 50%;
+    margin-top: 5rem;
+    transform: translateX(-50%);
+    width: 80%;
 }
 .profileImage{
     border-radius: 50%;
